@@ -1,1 +1,0 @@
-#define GLC_POINT_SIZE          100
