@@ -36,8 +36,9 @@
 #include "ocontext.h"
 #include "oarray.h"
 
-#define GLC_OUT_OF_RANGE_LEN 11
-#define GLC_EPSILON 1E-6
+#define GLC_OUT_OF_RANGE_LEN	11
+#define GLC_EPSILON		1E-6
+#define GLC_POINT_SIZE		128
 
 typedef struct {
   FT_ListNodeRec node;
